Fixed README, working on vertical spacing

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -250,6 +250,7 @@ a:focus {
 
 .content-section {
     padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .team-section {
